Remove code smell and improve code coverage